# smart-hardware-ai-agent

./: .gitignore  Dockerfile  Dockerfile.compose  LICENSE  README.md  Resume.md  api.py  app.py  docker-compose.yml  final_resume_extract.txt  greeting.md  latest_resume_extract.txt  pyproject.toml  requirements.txt  resume_current_extract.txt  resume_extract.txt  停止.bat  启动.bat
.github/workflows/: keep-alive.yml
agent/: react_agent.py
agent/tools/: agent_tools.py  middleware.py
config/: chroma.yml  rag.yml
data/: 扫地机器人基础知识库.txt  扫地机器人故障排查知识库.txt  扫地机器人维护保养与使用建议.txt
model/: factory.py
prompts/: main_prompt.txt  rag_summarize.txt  report_prompt.txt
rag/: rag_service.py  vector_store.py
utils/: config_handler.py  file_handler.py  logger_handler.py  path_tool.py  prompt_loader.py
