[project]
name = "agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dashscope>=1.25.17",
    "langchain>=1.2.18",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.4.1",
    "pypdf>=6.11.0",
    "streamlit>=1.57.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
